# shadowwall-ai

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agent/: graph.py  state.py
backend/app/agent/nodes/: assess.py  classify.py  enrich.py  report.py  respond.py
backend/app/agent/prompts/: threat_analysis.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/api/v1/routes/: auth.py  events.py  tokens.py
backend/app/core/: config.py  logging.py  middleware.py  security.py
backend/app/db/: engine.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 1079a687d564_create_honey_tokens_table.py  1678e02a0f6c_create_users_table.py  2efceb2e24da_create_trigger_events_table.py  3c6ae13b40c2_create_users_table.py
backend/app/db/models/: event.py  token.py  user.py
backend/app/db/repositories/: event.py  token.py  user.py
backend/app/schemas/: auth.py  event.py  token.py
backend/app/services/: agent.py  auth.py  event.py  token.py
backend/app/websocket/: manager.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/dashboard/: EventFeed.tsx  SeverityChart.tsx  StatsCards.tsx  TokenTable.tsx
frontend/src/components/ui/: Badge.tsx  ConnectionStatus.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/services/: api.ts
frontend/src/stores/: dashboardStore.ts
frontend/src/types/: index.ts
infra/: docker-compose.yml
