[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "shadowwall-ai-backend"
version = "0.1.0"
description = "ShadowWall AI — Real-time cyber deception backend"
requires-python = ">=3.12"

dependencies = [
    # --- Web Framework ---
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",

    # --- Data Validation ---
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",

    # --- Database ---
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",

    # --- Cache ---
    "redis==5.0.4",
    "hiredis==2.3.2",

    # --- Security ---
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "slowapi==0.1.9",

    # --- AI / Agent ---
    "langchain==0.2.1",
    "langgraph==0.1.1",
    "langchain-openai==0.1.7",

    # --- Observability ---
    "structlog==24.1.0",
    "prometheus-fastapi-instrumentator==6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
    "ruff==0.4.4",
    "mypy==1.10.0",
    "bandit==1.7.8",
    "pip-audit==2.7.3",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "S", "UP"]
ignore = ["S101"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
